# large-deviations

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/distributions/: bernoulli.md
docs/foundations/: cramers_theorem_from_scratch.md  exponential_tilting.md
notebooks/: 01_bernoulli_exponential_tilting.ipynb  02_cramer_bernoulli_tail_risk.ipynb  03_bernoulli_importance_sampling.ipynb
scripts/: generate_notebook_02_preview.py  make_readme_preview.py
src/large_deviations/: __init__.py  distributions.py  foundations.py  plotting.py  tilting.py
src/large_deviations/importance_sampling/: __init__.py  bernoulli.py  core.py
tests/: test_distributions.py  test_foundations.py  test_import.py  test_importance_sampling_bernoulli.py  test_importance_sampling_core.py
